--- a/app/src/main/res/layout/recycler_item.xml
+++ b/app/src/main/res/layout/recycler_item.xml
@@ -14,13 +14,12 @@
             android:id="@+id/resturant_img"
             android:layout_width="0dp"
             android:layout_height="200dp"
-            android:layout_marginTop="0dp"
             android:scaleType="centerCrop"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@mipmap/ic_launcher"
+            tools:ignore="ContentDescription"
             tools:layout_constraintLeft_creator="1"
             tools:layout_constraintRight_creator="1" />
 
