--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -1,21 +1,19 @@
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:tools="http://schemas.android.com/tools"
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:map="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="elsaghier.com.zomato.MapsActivity"
-    tools:layout_editor_absoluteY="81dp"
-    tools:layout_editor_absoluteX="0dp">
+    tools:layout_editor_absoluteX="0dp"
+    tools:layout_editor_absoluteY="81dp">
 
     <TextView
         android:id="@+id/detail_rating"
         android:layout_width="48dp"
         android:layout_height="48dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginRight="16dp"
         android:layout_marginTop="16dp"
-        android:background="@drawable/ackpuynhxlfz"
+        android:layout_marginEnd="16dp"
+        android:background="@drawable/blue_circle_background"
         android:elevation="2dp"
         android:gravity="center"
         android:padding="0dp"
@@ -34,27 +32,28 @@
         android:id="@+id/detail_address"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginLeft="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginRight="8dp"
         android:text="Adress Place holder"
         android:textSize="16sp"
         android:textStyle="bold"
-        tools:layout_constraintLeft_creator="1"
-        android:layout_marginTop="8dp"
-        map:layout_constraintTop_toBottomOf="@+id/detail_rest_name"
         map:layout_constraintLeft_toRightOf="@+id/imageView7"
-        android:layout_marginLeft="8dp"
         map:layout_constraintRight_toLeftOf="@+id/detail_rating"
-        android:layout_marginRight="8dp"/>
+        map:layout_constraintTop_toBottomOf="@+id/detail_rest_name"
+        tools:layout_constraintLeft_creator="1" />
 
     <ImageView
         android:id="@+id/imageView7"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        map:srcCompat="@drawable/mapmarker"
+        android:layout_marginLeft="16dp"
         android:layout_marginTop="8dp"
         android:scaleType="centerCrop"
+        map:layout_constraintLeft_toLeftOf="parent"
         map:layout_constraintTop_toBottomOf="@+id/detail_rest_name"
-        android:layout_marginLeft="16dp"
-        map:layout_constraintLeft_toLeftOf="parent"/>
+        map:srcCompat="@drawable/mapmarker"
+        tools:ignore="ContentDescription" />
 
     <ImageView
         android:id="@+id/detail_img"
@@ -65,7 +64,7 @@
         map:layout_constraintLeft_toLeftOf="parent"
         map:layout_constraintRight_toRightOf="parent"
         map:layout_constraintTop_toTopOf="parent"
-        map:srcCompat="@mipmap/ic_launcher"
+        tools:ignore="ContentDescription"
         tools:layout_constraintLeft_creator="1"
         tools:layout_constraintRight_creator="1"
         tools:layout_constraintTop_creator="1" />
@@ -75,17 +74,16 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
         android:text="@string/rest_name"
         android:textSize="24sp"
         android:textStyle="bold"
-        android:layout_marginTop="8dp"
-        map:layout_constraintTop_toBottomOf="@+id/detail_img"
-        android:layout_marginLeft="16dp"
+        map:layout_constraintDimensionRatio=""
+        map:layout_constraintHorizontal_bias="0.0"
         map:layout_constraintLeft_toLeftOf="parent"
         map:layout_constraintRight_toLeftOf="@+id/detail_rating"
-        android:layout_marginRight="8dp"
-        map:layout_constraintDimensionRatio=""
-        map:layout_constraintHorizontal_bias="0.0" />
+        map:layout_constraintTop_toBottomOf="@+id/detail_img" />
 
     <fragment
         android:id="@+id/map"
@@ -94,11 +92,11 @@
         android:layout_height="0dp"
         android:layout_marginTop="16dp"
         map:layout_constraintBottom_toBottomOf="parent"
-        map:layout_constraintTop_toBottomOf="@+id/detail_address"
-        tools:layout_constraintTop_creator="1"
-        tools:layout_constraintRight_creator="1"
-        tools:layout_constraintBottom_creator="1"
+        map:layout_constraintLeft_toLeftOf="parent"
         map:layout_constraintRight_toRightOf="parent"
+        map:layout_constraintTop_toBottomOf="@+id/detail_address"
+        tools:layout_constraintBottom_creator="1"
         tools:layout_constraintLeft_creator="1"
-        map:layout_constraintLeft_toLeftOf="parent" />
+        tools:layout_constraintRight_creator="1"
+        tools:layout_constraintTop_creator="1" />
 </androidx.constraintlayout.widget.ConstraintLayout>
