--- a/app/src/main/res/drawable/ic_menu.xml
+++ b/app/src/main/res/drawable/ic_menu.xml
@@ -1,18 +1,9 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="512dp"
-    android:height="512dp"
-    android:viewportWidth="512"
-    android:viewportHeight="512">
-  <path
-      android:fillColor="#FF000000"
-      android:pathData="M128,320h256v64h-256z"/>
-  <path
-      android:fillColor="#FF000000"
-      android:pathData="M128,224h256v64h-256z"/>
-  <path
-      android:fillColor="#FF000000"
-      android:pathData="M480,0H32C14.312,0 0,14.312 0,32v448c0,17.688 14.312,32 32,32h448c17.688,0 32,-14.312 32,-32V32C512,14.312 497.688,0 480,0zM448,448H64V64h384V448z"/>
-  <path
-      android:fillColor="#FF000000"
-      android:pathData="M128,128h256v64h-256z"/>
+        android:width="24dp"
+        android:height="24dp"
+        android:viewportWidth="24.0"
+        android:viewportHeight="24.0">
+    <path
+        android:fillColor="#FF000000"
+        android:pathData="M8.1,13.34l2.83,-2.83L3.91,3.5c-1.56,1.56 -1.56,4.09 0,5.66l4.19,4.18zM14.88,11.53c1.53,0.71 3.68,0.21 5.27,-1.38 1.91,-1.91 2.28,-4.65 0.81,-6.12 -1.46,-1.46 -4.2,-1.1 -6.12,0.81 -1.59,1.59 -2.09,3.74 -1.38,5.27L3.7,19.87l1.41,1.41L12,14.41l6.88,6.88 1.41,-1.41L13.41,13l1.47,-1.47z"/>
 </vector>
