--- a/app/src/main/res/layout/recycler_item.xml
+++ b/app/src/main/res/layout/recycler_item.xml
@@ -28,10 +28,9 @@
             android:id="@+id/resturant_name"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="16dp"
-            android:layout_marginTop="16dp"
-            android:layout_marginRight="16dp"
-            android:text="@string/rest_name"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="16dp"
             android:textSize="24sp"
             android:textStyle="bold"
             app:layout_constraintHorizontal_bias="0.0"
@@ -47,15 +46,15 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginLeft="8dp"
-            android:layout_marginTop="24dp"
             android:layout_marginRight="8dp"
-            android:text="Adress Place holder"
             android:textSize="16sp"
             android:textStyle="bold"
+            app:layout_constraintBottom_toBottomOf="@+id/imageView3"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintLeft_toRightOf="@+id/imageView3"
             app:layout_constraintRight_toLeftOf="@+id/rating"
-            app:layout_constraintTop_toBottomOf="@+id/resturant_cost"
+            app:layout_constraintTop_toTopOf="@+id/imageView3"
+            app:layout_constraintWidth_default="wrap"
             tools:layout_constraintLeft_creator="1"
             tools:layout_constraintRight_creator="1" />
 
@@ -63,10 +62,9 @@
             android:id="@+id/resturant_cost"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="16dp"
-            android:layout_marginTop="8dp"
-            android:layout_marginRight="16dp"
-            android:text="Average Cost for 2"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="4dp"
+            android:layout_marginEnd="16dp"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
@@ -76,10 +74,11 @@
 
         <ImageView
             android:id="@+id/imageView3"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="24dp"
+            android:layout_width="32dp"
+            android:layout_height="32dp"
+            android:layout_marginTop="16dp"
+            android:layout_marginBottom="8dp"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/resturant_cost"
             app:srcCompat="@drawable/mapmarker"
@@ -87,20 +86,18 @@
 
         <TextView
             android:id="@+id/rating"
-            android:layout_width="48dp"
-            android:layout_height="48dp"
+            android:layout_width="32dp"
+            android:layout_height="32dp"
             android:layout_marginTop="16dp"
-            android:layout_marginEnd="16dp"
-            android:layout_marginBottom="16dp"
+            android:layout_marginBottom="8dp"
             android:background="@drawable/blue_circle_background"
             android:elevation="2dp"
             android:gravity="center"
             android:padding="0dp"
-            android:text="3.4"
             android:textAlignment="center"
             android:textColor="@android:color/white"
             android:textIsSelectable="false"
-            android:textSize="20sp"
+            android:textSize="14sp"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintRight_toRightOf="parent"
