--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -33,20 +33,20 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginLeft="8dp"
-        android:layout_marginTop="8dp"
         android:layout_marginRight="8dp"
         android:text="Adress Place holder"
         android:textSize="16sp"
         android:textStyle="bold"
+        map:layout_constraintBottom_toBottomOf="@+id/imageView7"
         map:layout_constraintLeft_toRightOf="@+id/imageView7"
         map:layout_constraintRight_toLeftOf="@+id/detail_rating"
-        map:layout_constraintTop_toBottomOf="@+id/detail_rest_name"
+        map:layout_constraintTop_toTopOf="@+id/imageView7"
         tools:layout_constraintLeft_creator="1" />
 
     <ImageView
         android:id="@+id/imageView7"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="32dp"
+        android:layout_height="32dp"
         android:layout_marginLeft="16dp"
         android:layout_marginTop="8dp"
         android:scaleType="centerCrop"
@@ -90,11 +90,10 @@
         android:name="com.google.android.gms.maps.SupportMapFragment"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginTop="16dp"
         map:layout_constraintBottom_toBottomOf="parent"
         map:layout_constraintLeft_toLeftOf="parent"
         map:layout_constraintRight_toRightOf="parent"
-        map:layout_constraintTop_toBottomOf="@+id/detail_address"
+        map:layout_constraintTop_toBottomOf="@+id/imageView7"
         tools:layout_constraintBottom_creator="1"
         tools:layout_constraintLeft_creator="1"
         tools:layout_constraintRight_creator="1"
