add dependencies for viewmodel and live data

--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -11,8 +11,7 @@
         android:id="@+id/detail_rating"
         android:layout_width="48dp"
         android:layout_height="48dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="16dp"
+        android:layout_marginRight="8dp"
         android:background="@drawable/blue_circle_background"
         android:elevation="2dp"
         android:gravity="center"
@@ -23,6 +22,7 @@
         android:textIsSelectable="false"
         android:textSize="20sp"
         android:textStyle="bold"
+        map:layout_constraintBottom_toBottomOf="@+id/detail_address"
         map:layout_constraintRight_toRightOf="parent"
         map:layout_constraintTop_toBottomOf="@+id/detail_img"
         tools:layout_constraintRight_creator="1"
@@ -33,11 +33,11 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginLeft="8dp"
+        android:layout_marginTop="8dp"
         android:layout_marginRight="8dp"
         android:text="Adress Place holder"
         android:textSize="16sp"
         android:textStyle="bold"
-        map:layout_constraintBottom_toBottomOf="@+id/imageView7"
         map:layout_constraintLeft_toRightOf="@+id/imageView7"
         map:layout_constraintRight_toLeftOf="@+id/detail_rating"
         map:layout_constraintTop_toTopOf="@+id/imageView7"
@@ -47,8 +47,8 @@
         android:id="@+id/imageView7"
         android:layout_width="32dp"
         android:layout_height="32dp"
-        android:layout_marginLeft="16dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginTop="4dp"
         android:scaleType="centerCrop"
         map:layout_constraintLeft_toLeftOf="parent"
         map:layout_constraintTop_toBottomOf="@+id/detail_rest_name"
@@ -73,9 +73,9 @@
         android:id="@+id/detail_rest_name"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
+        android:layout_marginLeft="8dp"
         android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
+        android:layout_marginRight="8dp"
         android:text="@string/rest_name"
         android:textSize="24sp"
         android:textStyle="bold"
@@ -90,10 +90,11 @@
         android:name="com.google.android.gms.maps.SupportMapFragment"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:layout_marginTop="8dp"
         map:layout_constraintBottom_toBottomOf="parent"
         map:layout_constraintLeft_toLeftOf="parent"
         map:layout_constraintRight_toRightOf="parent"
-        map:layout_constraintTop_toBottomOf="@+id/imageView7"
+        map:layout_constraintTop_toBottomOf="@+id/detail_address"
         tools:layout_constraintBottom_creator="1"
         tools:layout_constraintLeft_creator="1"
         tools:layout_constraintRight_creator="1"
