--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -9,14 +9,13 @@
 
     <TextView
         android:id="@+id/detail_rating"
-        android:layout_width="48dp"
-        android:layout_height="48dp"
-        android:layout_marginRight="8dp"
+        android:layout_width="32dp"
+        android:layout_height="32dp"
+        android:layout_marginEnd="4dp"
         android:background="@drawable/blue_circle_background"
         android:elevation="2dp"
         android:gravity="center"
         android:padding="0dp"
-        android:text="3.4"
         android:textAlignment="center"
         android:textColor="@android:color/white"
         android:textIsSelectable="false"
@@ -24,7 +23,6 @@
         android:textStyle="bold"
         map:layout_constraintBottom_toBottomOf="@+id/detail_address"
         map:layout_constraintRight_toRightOf="parent"
-        map:layout_constraintTop_toBottomOf="@+id/detail_img"
         tools:layout_constraintRight_creator="1"
         tools:layout_constraintTop_creator="1" />
 
@@ -33,9 +31,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginLeft="8dp"
-        android:layout_marginTop="8dp"
         android:layout_marginRight="8dp"
-        android:text="Adress Place holder"
         android:textSize="16sp"
         android:textStyle="bold"
         map:layout_constraintLeft_toRightOf="@+id/imageView7"
@@ -47,7 +43,7 @@
         android:id="@+id/imageView7"
         android:layout_width="32dp"
         android:layout_height="32dp"
-        android:layout_marginLeft="8dp"
+        android:layout_marginStart="8dp"
         android:layout_marginTop="4dp"
         android:scaleType="centerCrop"
         map:layout_constraintLeft_toLeftOf="parent"
@@ -74,7 +70,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginLeft="8dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="4dp"
         android:layout_marginRight="8dp"
         android:text="@string/rest_name"
         android:textSize="24sp"
